apollo-federation/src/sources/connect/expand/tests/snapshots/it_expand_supergraph@types_used_twice.graphql-2.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/types_used_twice.graphql
---
{
    "connectors_Query_ts_0": Connector {
        id: ConnectId {
            label: "connectors.example http: GET ",
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.ts),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "example",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [],
                query: {},
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "a",
                            ),
                            range: Some(
                                0..1,
                            ),
                        },
                        Some(
                            SubSelection {
                                selections: [
                                    Field(
                                        None,
                                        WithRange {
                                            node: Field(
                                                "id",
                                            ),
                                            range: Some(
                                                4..6,
                                            ),
                                        },
                                        None,
                                    ),
                                ],
                                range: Some(
                                    2..8,
                                ),
                                output_shape: None,
                            },
                        ),
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "b",
                            ),
                            range: Some(
                                9..10,
                            ),
                        },
                        Some(
                            SubSelection {
                                selections: [
                                    Field(
                                        None,
                                        WithRange {
                                            node: Field(
                                                "a",
                                            ),
                                            range: Some(
                                                13..14,
                                            ),
                                        },
                                        Some(
                                            SubSelection {
                                                selections: [
                                                    Field(
                                                        None,
                                                        WithRange {
                                                            node: Field(
                                                                "id",
                                                            ),
                                                            range: Some(
                                                                17..19,
                                                            ),
                                                        },
                                                        None,
                                                    ),
                                                ],
                                                range: Some(
                                                    15..21,
                                                ),
                                                output_shape: None,
                                            },
                                        ),
                                    ),
                                ],
                                range: Some(
                                    11..23,
                                ),
                                output_shape: None,
                            },
                        ),
                    ),
                ],
                range: Some(
                    0..23,
                ),
                output_shape: None,
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        request_variables: {},
        response_variables: {},
    },
}
